crates/provider-agy/src/wire/snapshots/xlightcli_provider_agy__wire__response__tests__fixture_function_call_snapshot.snap
---
source: crates/provider-agy/src/wire/response.rs
expression: events
---
- type: tool_call_started
  index: 0
  id: call_1
  name: read_file
- type: completed
  message:
    role: assistant
    content:
      - type: tool_use
        id: call_1
        name: read_file
        input:
          path: README.md
  stop: tool_use
  usage:
    input_tokens: 0
    output_tokens: 0
    cached_input_tokens: 0
    reasoning_tokens: 0
