crates/provider-agy/src/wire/snapshots/xlightcli_provider_agy__wire__response__tests__fixture_safety_block_snapshot.snap
---
source: crates/provider-agy/src/wire/response.rs
expression: events
---
- type: completed
  message:
    role: assistant
    content: []
  stop: refusal
  usage:
    input_tokens: 0
    output_tokens: 0
    cached_input_tokens: 0
    reasoning_tokens: 0
